[All] Code cleanup